@@ -137,7 +137,7 @@ public class TimestampIndexSseTest extends BaseClusterIntegrationTest implements
     }
     FieldConfig newTimeFieldConfig = new FieldConfig.Builder(colName)
         .withTimestampConfig(
-            new TimestampConfig(List.of(TimestampIndexGranularity.SECOND))
+            new TimestampConfig(Arrays.asList(TimestampIndexGranularity.SECOND))
         )
         .build();
     fieldConfigList.add(newTimeFieldConfig);
