@@ -109,7 +109,7 @@ public class VectorIndexType extends AbstractIndexType<VectorIndexConfig, Vector
 
   @Override
   public List<String> getFileExtensions(@Nullable ColumnMetadata columnMetadata) {
-    return List.of(V1Constants.Indexes.VECTOR_INDEX_FILE_EXTENSION,
+    return Arrays.asList(V1Constants.Indexes.VECTOR_INDEX_FILE_EXTENSION,
         V1Constants.Indexes.VECTOR_V99_INDEX_FILE_EXTENSION,
         V1Constants.Indexes.VECTOR_V912_INDEX_FILE_EXTENSION);
   }
